# huo

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  setup.cfg  setup.py
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation.yml  feature-request.yml
.github/workflows/: codeql-analysis.yml  pypi-release.yml
docs/: BP_formula_proof.md  Backpropagation_In_CNNs.md  backpropagation.md  convolution_arithmetic.md  neural_networks_and_deep_learning_02.md  neural_networks_and_deep_learning_03.md  neural_networks_and_deep_learning_03_problem.md  neural_networks_and_deep_learning_04.md  neural_networks_and_deep_learning_05.md  neural_networks_and_deep_learning_06.md  tutorial.md
huo/: __init__.py  art.py  cfg.py  cli.py  fbp.py  radon.py
js/: package-lock.json  package.json  tsconfig.json
js/demo/: index.html  main.js  main.ts
js/src/: art.js  fbp.ts
tests/: conftest.py  test_art.py  test_fbp.py  test_radon.py
tools/: projection.py
utils/: art.py
